This documents significant changes in the dev branch of ksh 93u+m.
For full details, see the git log at: https://github.com/ksh93/ksh
Uppercase BUG_* IDs are shell bug IDs as used by the Modernish shell library.

2025-01-03:

- The performance of virtual subshells has been significantly improved by
  avoiding unnecessary syscalls to save and restore the working directory.
  Thanks to Johnothan King for backporting and improving the AT&T 93v- code.

2024-12-30:

- The KEYBD trap should now be fully functional for multibyte characters
  (for example, non-Latin characters in UTF-8 locales). This fixes a bug
  inherited from AT&T and worked around on 2022-02-12.

2024-12-29:

- [v1.1] The emacs ^Y command now accepts a numeric parameter. For example,
  ESC 10 ^Y will now "yank" (paste) the latest deleted text 10 times.

2024-12-25:

- The dirname path-bound built-in now accepts multiple operands.

- The basename and dirname path-bound built-ins now have a -z/--zero option
  for compatibility with the GNU versions of these utilities. It causes the
  line terminator to be a zero byte instead of a newline.

- Fixed bugs related to the handling of an initial double slash in the
  basename and dirname path-bound built-ins when used on Windows (Cygwin).

- Fixed a buffer overflow problem in the handling of arithmetic functions.

2024-12-24:

- [v1.1] The fc/hist command has a new -E option. If this option is given,
  the command line that was loaded into the editor will only be executed if
  the temp file is saved before exiting the editor.

- [v1.1] The ^X^E (emacs mode) and v (vi mode) commands will now only
  execute the command line that was loaded into the full-screen editor if
  the temp file is saved before exiting the editor.

2024-12-22:

- In the emacs/gmacs line editor, the ESC [ <letter> macro feature, which is
  documented to input the value of the alias __<letter>, now actually works.
  A decades-old bug in internal variable handling rendered it inoperative.
